# tagflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  config.yml  file_manager.py  folder_importer.py  tag_manager.py  vetur.config.js
doc/: API文档.md  TagFlow 技术建议书.md  TagFlow 概要设计文档.md  TagFlow 系统详细设计规格说明书.md  TagFlow_Product_Blueprint.html  TagFlow原始需求.md  TagFlow需求调研.md
doc/开发阶段/: Milestone 1：项目初始化与数据库模型开发.md  Milestone 2：增量扫描引擎实现.md  Milestone 3：层级标签引擎实现.md  Milestone 4：API 层与虚拟视图实现.md  Milestone 5：前端基础架构与虚拟滚动视图实现.md  Milestone 6-1 认证 UI 与安全设置.md  Milestone 6：异步任务流水线与缩略图生成实现.md  Milestone 6：认证模块实现.md  Milestone 7：存储管理模块实现.md  Milestone 7：部署、容器化与产品化实现.md  Milestone 8：异步任务流水线与缩略图生成实现.md
docs/: api_documentation_en.md  api_documentation_zh.md
tagflow-core/: .env  Cargo.toml  tagflow.db  tagflow.db-shm  tagflow.db-wal
tagflow-core/migrations/: 202512260001_init.sql  202512290002_create_users.sql  202512300003_create_tasks.sql
tagflow-core/src/: lib.rs  main.rs
tagflow-core/src/api/: auth.rs  file.rs  library.rs  mod.rs  tag.rs
tagflow-core/src/core/: auth.rs  mod.rs
tagflow-core/src/core/tag/: mod.rs
tagflow-core/src/engine/: mod.rs  worker.rs
tagflow-core/src/engine/scanner/: mod.rs
tagflow-core/src/engine/tagger/: mod.rs
tagflow-core/src/infra/: db.rs  mod.rs  thumbnail.rs
tagflow-core/src/infra/storage/: mod.rs
tagflow-core/src/models/: db.rs  dto.rs  mod.rs
tagflow-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tagflow-ui/src/: App.vue  vue-virtual-scroller.d.ts
tagflow-ui/src/api/: http.ts
(+10 files in other folders)
