[package]
name = "tagflow-core"
version = "0.1.0"
edition = "2024"
default-run = "tagflow-core"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opendal = { version = "0.50", features = ["services-fs"] }
futures-util = "0.3"
# IO 工具 (用于流式传输文件)
tokio-util = { version = "0.7", features = ["io"] }
# 密码哈希
argon2 = "0.5"
# JWT 令牌
jsonwebtoken = "9.2"
# 生成随机盐值
rand_core = { version = "0.6", features = ["getrandom"] }